# rpi-drm

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
resources/: citrus_assets_geo_node.cit
src/: lib.rs  main.rs  qpu.rs  vc4_card.rs  vc4_cl.rs  vc4_image.rs
src/shaders/: mod.rs  test_gen.frag  test_gen.rs  test_gen.vert  test_model.frag  test_model.rs  test_model.vert  test_triangle.rs  test_triangle2.frag  test_triangle2.rs  test_triangle2.vert  test_triangle2_inc.glsl  test_triangle3.frag  test_triangle3.rs  test_triangle3.vert
tests/: image_test.rs
vc4-drm/: Cargo.toml
vc4-drm/src/: card.rs  cl.rs  image.rs  lib.rs  qpu.rs
vc4-drm/tests/: image_test.rs
vc4-drm/vc4-image-addr/: Cargo.toml
vc4-drm/vc4-image-addr/src/: lib.rs
vc4-drm/vc4-image-addr/tests/: tests.rs
vc4-drm/vc4-pack-textures/: Cargo.toml
vc4-drm/vc4-pack-textures/src/: lib.rs
