[package]
name = "rpi-drm"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
edition = "2021"

[dependencies]
vc4-drm = { path = "vc4-drm" }
num-traits = "0.2.15"
flate2 = "1.0"

[build-dependencies]
vc4-mesa-compiler = { git = "https://github.com/CirrusNeptune/mesa", branch = "vc4-glsl" }
vc4-pack-textures = { path = "vc4-drm/vc4-pack-textures" }
