[package]
name = "vc4-drm"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
edition = "2021"

[dependencies]
drm = { git = "https://github.com/Smithay/drm-rs.git", branch = "develop" }
num = "0.4.0"
glam = "0.24.0"
enum_dispatch = "0.3.11"

[dependencies.libc]
version = "^0.2.29"
default-features = false

[dependencies.drm-sys]
git = "https://github.com/Smithay/drm-rs.git"
branch = "develop"
version = "0.4.0"

[dependencies.drm-ffi]
git = "https://github.com/Smithay/drm-rs.git"
branch = "develop"
version = "0.5.0"

[dependencies.drm-fourcc]
version = "^2.2.0"

[dependencies.nix]
version = "0.26.0"
features = ["ioctl"]
default-features = false

[dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time"]
