[package]
name = "vc4-drm"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
edition = "2021"

[dependencies]
vc4-image-addr = { path = "vc4-image-addr" }
drm = { git = "https://github.com/Smithay/drm-rs.git", branch = "develop" }

[dependencies.libc]
version = "^0.2.29"
default-features = false

[dependencies.drm-sys]
git = "https://github.com/Smithay/drm-rs.git"
branch = "develop"
version = "0.4.0"

[dependencies.drm-ffi]
git = "https://github.com/Smithay/drm-rs.git"
branch = "develop"
version = "0.5.0"

[dependencies.drm-fourcc]
version = "^2.2.0"

[dependencies.nix]
version = "0.26.0"
features = ["ioctl"]
default-features = false

[dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time"]
